<resources>
    <string name="app_name">MyApplication2</string>
    <string name="username">username :</string>
    <string name="password">password :</string>
    <string name="login">login</string>
    <string name="signUp">signUp</string>
    <string name="phone_number">phone number :</string>
    <string name="email">email :</string>
    <string name="send_email">send email</string>
    <string name="receiver">receiver :</string>
    <string name="subject">subject :</string>
    <string name="context">context :</string>
    <string name="send">send</string>
    <string name="inbox">inbox</string>
</resources>